<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_corner_16"
    android:layout_margin="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/title_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_purple_corner_16"
        android:text="@string/edit_information"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/update_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="@string/student_name"
        android:background="@drawable/bg_white_corner_10_border_gray"
        android:ems="10"
        android:hint="@string/student_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColorHint="#757575"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_add" />

    <EditText
        android:id="@+id/update_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="MSSV"
        android:background="@drawable/bg_white_corner_10_border_gray"
        android:ems="10"
        android:hint="@string/student_id"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColorHint="#757575"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_name" />

    <Button
        android:id="@+id/btn_cancel_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_id"
        android:background="@drawable/bg_grey_corner_10"
        android:textSize="15sp"
        android:layout_weight="1"
        android:text="@string/cancel"/>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/update"
        android:layout_weight="1"
        android:textSize="15sp"
        android:background="@drawable/bg_purple_corner_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel_update"
        app:layout_constraintTop_toBottomOf="@+id/update_id" />

</androidx.constraintlayout.widget.ConstraintLayout>