<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_corner_16"
    android:layout_margin="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/title_remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_purple_corner_16"
        android:text="@string/remove_student"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/remove_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title_remove"
        android:text="@string/remove_student_confirm"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="20dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:maxLines="2"
        android:ellipsize="none"
        android:breakStrategy="simple"
        android:lineSpacingExtra="2dp"
        />

    <Button
        android:id="@+id/btn_cancel_remove"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:background="@drawable/bg_grey_corner_10"
        android:text="@string/cancel"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove_confirm"/>

    <Button
        android:id="@+id/btn_remove"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:background="@drawable/bg_purple_corner_10"
        android:text="@string/remove"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel_remove"
        app:layout_constraintTop_toBottomOf="@+id/remove_confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>